...
            android:scaleType="centerCrop"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            tools:src="@drawable/recipe_placeholder" />

        <Button
            android:id="@+id/btn_start_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            card_view:layout_constraintTop_toBottomOf="@id/iv_photo"
            card_view:layout_constraintStart_toStartOf="parent"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/colorAccent"
            android:text="@string/start_recipe_button"/>

        <Button
            android:id="@+id/btn_show_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            card_view:layout_constraintTop_toBottomOf="@id/iv_photo"
            card_view:layout_constraintStart_toEndOf="@id/btn_start_recipe"
            style="?android:attr/borderlessButtonStyle"
...
